keel/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keel
  namespace: kube-system
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "cloud-keel.ucdialplans.com"
  rules:
  - backendRefs:
    - name: keel
      namespace: kube-system
      kind: Service
      port: 9300
